# tp_game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  STRUCTURE.md  UML.xmi  cmake_install.cmake  main.cpp
src/: main.cpp
src/game/: game.cpp  game.hpp  game_events.cpp  game_events.hpp  game_map.cpp  game_map.hpp  player_data.cpp  player_data.hpp
src/game/map_entities/: action.hpp  actions.hpp  cell.hpp  unit_obj.cpp  unit_obj.hpp
src/game/unit/: _constructable_unit.cpp  module_builder.cpp  module_builder.hpp  modules.hpp  unit.cpp  unit.hpp  unit_builder.cpp  unit_builder.hpp  unit_memory_elem.hpp  unit_module.cpp  unit_module.hpp
src/out_api/: draw.cpp  draw.hpp  game_draw.cpp  game_draw.hpp  init.cpp  init.hpp  input.cpp  input.hpp  input_controller.cpp  input_controller.hpp
